--- a/package.json
+++ b/package.json
@@ -23,13 +23,17 @@
     "@adonisjs/fold": "^4.0.8",
     "@adonisjs/framework": "^5.0.7",
     "@adonisjs/ignitor": "^2.0.6",
-    "@adonisjs/lucid": "^5.0.4"
+    "@adonisjs/lucid": "^5.0.4",
+    "adonis-acl": "^1.1.1",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "eslint": "^5.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.0.0",
     "eslint-plugin-standard": "^3.1.0"
   },
